Fix overlay visibile durante caricamento su mobile, array film fuori metodo, aggiunta immagine placeholder

--- a/style.css
+++ b/style.css
@@ -433,6 +433,10 @@ header {
         display: block;
     }
 
+    .card-overlay {
+        display: none;
+    }
+    
     /* Modale */
     .modal-mobile {
         display: none;
